Took my name out of the footer. When the HTML is pasted into sendy the UNSUBSCRIBE link will need to be manually populated.

--- a/2018w39-intersections-email.mjml
+++ b/2018w39-intersections-email.mjml
@@ -222,9 +222,8 @@
           align="center"
           color="#917792"
         >
-          This email was lovingly hacked together by <a href="http://codame.com/artists/jordan-gray">Jordan Gray</a>. Please let me know your feedback/thoughts!<br>
-          You can send the permalink to friends or invite them to subscribe.<br>
-          If you unsubscribe I hope to see you around the other channels or meatspace =)
+          This email was lovingly hacked together by CODAME Ninjas!<br>
+          Unsubscribe if you must ;)
           Thank you for your support of ART+TECH!
         </mj-text>        
         <mj-divider border-width="1px" border-color="#E0E0E0"></mj-divider>
