about to start working on the venue and date announcement

--- a/2019w08-space-rfp.mjml
+++ b/2019w08-space-rfp.mjml
@@ -33,7 +33,8 @@
         ></mj-image>
         <mj-text align="center" font-size="18px">
           Where: San Francisco
-          <br>
+        </mj-text>
+        <mj-text align="center" font-size="18px">
           When: Fall, 2019
           <br>
         </mj-text>
